styles.css
/* ... */
.sponsor-logo, .sponsor-logo-square, .sponsor-logo-large, .sponsor-logo-general {
  display: inline-block;
  margin: 0px 15px 15px 15px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-transition: all 0.25s ease-in-out;
  -o-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out; }
  .sponsor-logo:hover, .sponsor-logo-square:hover, .sponsor-logo-large:hover, .sponsor-logo-general:hover {
    -webkit-filter: grayscale(90%);
    opacity: 0.5; }

.sponsor-logo-square {
  width: 75px;
  height: 75px; }

.sponsor-logo-large {
  width: 200px;
  height: 75px; }

.sponsor-logo-general {
  width: 150px;
  height: 75px; }

.sponsor-desc {
  display:none;
}


.chevron {
  background-image: url("../img/sponsors/Chevron.png"); }

.rational-systems {
  background-image: url("../img/sponsors/rational-systems.png"); }

.goldenfrog {
  background-image: url("../img/sponsors/goldenfrog.png"); }

.palladium {
  background-image: url("../img/sponsors/palladium_stacked.png"); }

.microsoft {
  background-image: url("../img/sponsors/Microsoft2015.png"); }

.google {
  background-image: url("../img/sponsors/Google_Logo_2015.png"); }

.hbk {
  background-image: url("../img/sponsors/hbk.jpg"); }

.indeed {
  background-image: url("../img/sponsors/indeed_logo.png"); }

.ebay {
  background-image: url("../img/sponsors/ebay.jpg"); }

.epic {
  background-image: url("../img/sponsors/Epic.gif"); }

.facebook {
  background-image: url("../img/sponsors/facebook.png"); }

.tcs {
  background-image: url("../img/sponsors/TCS.jpg");
  width: 200px !important; }

.oracle {
  background-image: url("/img/oracle.png");
  cursor: pointer;
}

.Farmers {
background-image: url("img/Farmers.png");
}

.delphix {
  background-image: url("../img/sponsors/delphix.png"); }

.texas-instruments {
  background-image: url("../img/sponsors/texas-instruments.png"); }

.venmo {
  background-image: url("../img/sponsors/venmo.png"); }

.two-sig {
  background-image: url("../img/sponsors/2sig-cropped.png");
  cursor: pointer;
}

.two-sig-cropped {
  background-image: url("../img/sponsors/2sig-cropped.png"); }

.sendgrid {
  background-image: url("../img/sponsors/sendgrid.png"); }

.snapstream {
  background-image: url("../img/sponsors/snapStreamLogo.jpg"); }

.tableau {
  background-image: url("../img/sponsors/tableau.png"); }

.goldman-sachs {
  background-image: url("../img/sponsors/goldman-sachs.jpg"); }

.graphic-stock {
  background-image: url("../img/sponsors/GraphicStock.png"); }

.github {
  background-image: url("../img/sponsors/github.png"); }

.rice-cs {
  background-image: url("../img/sponsors/RiceComputerScience.png"); }

.rice-eng {
  background-image: url("../img/sponsors/RiceEngineeringThumb.png"); }

.rice-eng-alumni {
  background-image: url("../img/sponsors/RiceEngineeringAlumni.png"); }

.rice-ieee {
  background-image: url("../img/sponsors/rjceieee.png"); }

.ethernest {
  background-image: url("../img/sponsors/Ethernestlogowords.png"); }

.readyforce {
  background-image: url("../img/sponsors/Readyforce.png"); }

.challenge-post {
  background-image: url("../img/sponsors/ChallengePost.png"); }

.mlh {
  background-image: url("img/mlh-logo.png"); }
.pf {
  background-image: url("img/logo-black.png"); }

.hacker-rank {
  background-image: url("../img/sponsors/hackerrank.png"); }

.aidap {
  background-image: url("../img/sponsors/aidap.png"); }

.alert-logic {
  background-image: url("../img/sponsors/alertlogic.png"); }

.kpcb {
  background-image: url("../img/sponsors/kpcb.png"); }

.quantlab {
  background-image: url("../img/sponsors/quantlab-financial.png"); }

.intuitive-machines {
  background-image: url("../img/sponsors/intuitive-machines.png"); }

.pros {
  background-image: url("../img/sponsors/pros.png"); 
  cursor: pointer;
}

.digitalocean {
  background-image: url("../img/digitalocean.png"); }

.monster_energy {
  background-image: url("img/monster_energy.jpg");
}

.five-hour {
  background-image: url("img/five-hour.png");
}

.ibm {
  background-image: url("../img/sponsors/ibm.svg");
  cursor: pointer;
}

.ricecs {
  background-image: url("../img/sponsors/RiceComputerScience.png"); 
  cursor: pointer;
}

.square {
  background-image: url("img/square.png"); }

.logo_JetBrains_4{
  background-image: url("img/logo_JetBrains_4.png");}

.Obsidian-Entertainment-logo{
  background-image: url("img/Obsidian-Entertainment-logo.png");
}

}
.wolframalpha {
  background-image: url("../img/sponsors/wolframalpha.png"); }

#s-footer {
  background-color: #27ae60;
  height: 60px; }
  #s-footer .section-text {
    margin-top: 15px; }

.footer-text {
  color: white;
  font-size: 12px; }
  .footer-text a {
    color: white;
    font-size: 12px;
    -webkit-transition: color 0.25s ease-in-out;
    -o-transition: color 0.25s ease-in-out;
    transition: color 0.25s ease-in-out; }
    .footer-text a:hover {
      color: #BBBBBB; }

